🔧 set 色の微調整

--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ a:hover {
 
 body {
   background-color: #ffffff;
-  color: #000000;
+  color: #1b1b1b;
   margin: 0;
   display: flex;
   place-items: center;
